FINDSPEC: New routine for finding SDSS spectra that match a given RA, DEC.
MYFLUXCALIB: Make robust to degenerate case of only 1 input spectro-photo std.
PLATELIST: Lower (S/N)^2 cutoff to 13 for all G,I bands (from 15 previously).
           If ZWARNING flag exists in 1D outputs, use that to determine
           number of UNKNOWN or SKY identifications.
SPREDUCE1D: Search for stars at velocities to +/- 1200 km/s (was 600 km/s).
            No longer identify objects as UNKNOWN, but rather set bits
              in a ZWARNING flag.
            Add outputs ZWARNING, SN_MEDIAN, FRACNSIGMA,
              COUNTS_SPECTRO, COUNTS_SYNTH, COUNTS_SKY (not used yet),
              VDISP, VDISP_ERR.
            Compute velocity dispersions using real-space method (VDISPFIT).
            Slightly increase width for re-fitting galaxy redshifts from
              PWIDTH=5 to 7.  This may fix PR #1938.
TELLURIC_CORR: If a telluric star is deemded bad, then reject all of
            its FITFLUX pixels from the global fit.  Previously, we were
            only rejecting the pixels INDT, but still allowing bad continuum
            pixels into the fit.  This fixes PR #2028.
YANNY_PAR (in idlutils): If several lines have the same keyword name,
            then return all of those values as an array.  This makes this
            routine backwards-compatable with Yanny files written previously
            with SPPLAN2D.
ZFIND: Get rid of SIGMA2,SIGMA2_ERR and add VDISP,VDISP_ERR.

New installation script "evilinstall" in the idlutils product.

Add a line to the cron tables from "sos_start" and "sprobot_start" to
keep the disk auto-mount points alive at Princeton (or anywhere using an
amd daemon).

-------------------------------------------------------------------------------
v4_6_2 (Feb 14, 2001)

For the Fermi calling script SPALLREDUCE, add an NCOMBINE keyword
to limit the number of exposures combined.  Default to a maximum of 7.
